fix overflow x

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 }
 
 body {
+    overflow-x: hidden;
     font-family: "JetBrains Mono", monospace;
     display: flex;
     justify-content: start;
